# pyapso

./: .gitignore  LICENSE  README.md  f1.py  fit_func.py  fit_func_withconstraint.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/: demo_1.py  demo_2.py  demo_3.py
pyapso/: __init__.py  pyapso.py
src/: pyapso.py  src_pyapso.py  test.py
tests/: test_validate_1.py  test_validate_2.py
