[build-system]
requires 		= ["setuptools>=61.0", "wheel"]
build-backend 	= "setuptools.build_meta"

[project]
name 			= "PyApso"
version 		= "1.1.0"
description 	= "Adaptive Particle Swarm Optimization for continuous, multi-objective, and multidimensional problems"
readme 			= "README.md"
keywords 		= ["optimization", "particle swarm optimization", "APSO", "metaheuristic"]

dependencies 	= [
    "numpy",
    "tqdm",
    "matplotlib"
]

[project.urls]
Homepage 		= "https://github.com/smohamadabedy/pyapso"
Documentation 	= "https://github.com/smohamadabedy/pyapso#readme"
Source 			= "https://github.com/smohamadabedy/pyapso"
Issues 			= "https://github.com/smohamadabedy/pyapso/issues"